--- a/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate_settings/estate_settings.json
+++ b/antoryum_gayrimenkul/antoryum_gayrimenkul/doctype/estate_settings/estate_settings.json
@@ -20,12 +20,12 @@
   {
    "fieldname": "portfoy_title",
    "fieldtype": "Data",
-   "label": "Portf\u00f6y Ba\u015fl\u0131\u011f\u0131"
+   "label": "Portföy Başlığı"
   },
   {
    "fieldname": "portfoy_introduction",
    "fieldtype": "Small Text",
-   "label": "Portf\u00f6y Tan\u0131t\u0131m\u0131"
+   "label": "Portföy Tanıtımı"
   },
   {
    "fieldname": "column_break_3",
@@ -35,13 +35,13 @@
    "default": "0",
    "fieldname": "enable_social_sharing",
    "fieldtype": "Check",
-   "label": "Sosyal Medya Payla\u015f\u0131m\u0131n\u0131 Etkinle\u015ftir"
+   "label": "Sosyal Medya Paylaşımını Etkinleştir"
   },
   {
    "default": "0",
    "fieldname": "browse_by_category",
    "fieldtype": "Check",
-   "label": "Kategorilere G\u00f6re G\u00f6ster"
+   "label": "Kategorilere Göre Göster"
   },
   {
    "fieldname": "section_break_6",
@@ -50,7 +50,7 @@
   {
    "fieldname": "like_limit",
    "fieldtype": "Int",
-   "label": "Be\u011feni Limiti"
+   "label": "Beğeni Limiti"
   },
   {
    "fieldname": "column_break_8",
@@ -64,7 +64,7 @@
  ],
  "issingle": 1,
  "links": [],
- "modified": "2022-09-05 17:34:50.205839",
+ "modified": "2022-09-16 17:46:53.342607",
  "modified_by": "Administrator",
  "module": "Antoryum Gayrimenkul",
  "name": "Estate Settings",
@@ -76,7 +76,7 @@
    "email": 1,
    "print": 1,
    "read": 1,
-   "role": "Website Manager",
+   "role": "System Manager",
    "share": 1,
    "write": 1
   },
@@ -86,7 +86,7 @@
    "email": 1,
    "print": 1,
    "read": 1,
-   "role": "Blogger",
+   "role": "Estate Admin",
    "share": 1,
    "write": 1
   }
